test/fail/vardeclinitglobal.app
//can only be of a defined entity type
application test

  var a :Int := 3;

  function do() {

    
  }
